# Prescriptions-management-system

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  rustc-ice-2024-02-27T11_05_03-59544.txt  rustc-ice-2024-02-27T11_05_03-59545.txt  rustc-ice-2024-02-27T11_05_05-59581.txt  rustc-ice-2024-02-27T11_05_05-59582.txt  rustc-ice-2024-02-27T11_05_08-59603.txt  rustc-ice-2024-02-27T11_05_08-59604.txt  rustc-ice-2024-02-27T11_05_10-59628.txt  rustc-ice-2024-02-27T11_05_10-59629.txt  rustc-ice-2024-03-01T15_56_37-76418.txt  rustc-ice-2024-03-01T15_56_37-76419.txt  rustfmt.toml
.sqlx/: query-4cf7108943e6e9da4e5eb4cfd99d7881d7d85b1e9e2ae8d0b8ba439d50e1a588.json
src/: context.rs  create_tables.rs  main.rs
src/api/: doctors_controller.rs  drugs_controller.rs  error.rs  mod.rs  patients_controller.rs  pharmacists_controller.rs  prescriptions_controller.rs
src/api/utils/: error.rs  mod.rs  openapi_responses.rs
src/application/: mod.rs
src/application/api/: mod.rs
src/application/authentication/: entities.rs  models.rs  repository.rs  service.rs
src/application/helpers/: hashing.rs  mod.rs
src/application/sessions/: entities.rs  mod.rs  models.rs  repository.rs  service.rs
src/domain/: mod.rs
src/domain/doctors/: create_doctor.rs  create_doctor_repository.rs  get_doctors.rs  get_doctors_repository.rs  mod.rs  models.rs  repository.rs  repository_fake.rs  service.rs
src/domain/drugs/: mod.rs  models.rs  repository.rs  service.rs
src/domain/patients/: create_patient.rs  entities.rs  mod.rs  models.rs  repository.rs  service.rs
src/domain/pharmacists/: create_pharmacist.rs  entities.rs  mod.rs  models.rs  repository.rs  service.rs
src/domain/prescriptions/: controller.rs  create_prescription.rs  create_prescription_repository.rs  entities.rs  get_prescriptions.rs  get_prescriptions_repository.rs  mod.rs  models.rs  prescription_type.rs  prescriptions_models.rs  repository.rs  service.rs
src/domain/utils/: mod.rs  (+1 more)
src/infrastructure/: mod.rs
src/utils/: pagination.rs
(+68 files in other folders)
