[package]
name = "pms_v_0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
cargo-watch = "8.4.1"
rand = "0.8.5"
mini-redis = "0.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "time",
    "chrono",
] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
anyhow = "1.0.80"
regex = "1.10.3"
rstest = "0.18.2"
thiserror = "1.0.57"
async-trait = "0.1.79"
serde = { version = "1.0.130", features = ["derive"] }
rocket_okapi = { version = "0.8.0", features = ["swagger"] }
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
okapi = "0.7.0"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v1",                # Lets you generate time-based UUIDs
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]


[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "uuid"]
